Split the data into training and testing

--- a/Iris_data_set_TensorFlow.ipynb
+++ b/Iris_data_set_TensorFlow.ipynb
@@ -236,6 +236,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100, 5)\n",
+      "(50, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Randomly split the data into training and testing\n",
+    "# Adapt from : https://stackoverflow.com/questions/17412439/how-to-split-data-into-trainset-and-testset-randomly\n",
+    "np.random.shuffle(Iris)\n",
+    "# define 100 set of data for training, and 50 for test\n",
+    "training, test = Iris[:100], Iris[100:] \n",
+    "print(training.shape)\n",
+    "print(test.shape)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
