use cross_entropy & GradientDescentOptimizer methods train the model

--- a/Iris_data_set_TensorFlow.ipynb
+++ b/Iris_data_set_TensorFlow.ipynb
@@ -222,7 +222,7 @@
     "# https://www.tensorflow.org/api_docs/python/tf/truncated_normal\n",
     "W = tf.Variable(tf.truncated_normal([4,1],stddev=0.1))  # Weight ([4,1]: 4 input and 1 output)\n",
     "b = tf.Variable(tf.zeros([1]) + 1)                      # bias\n",
-    "prediction = tf.nn.softmax(tf.matmul(W,x) + b)"
+    "prediction = tf.nn.softmax(tf.matmul(x,W) + b)"
    ]
   },
   {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,36 @@
    "metadata": {},
    "source": [
     "## 3. Train the model\n",
-    "Use the testing set to train your model."
+    "Use the training set to train your model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# get input data_set and output data_set\n",
+    "train_in = training[:,:4]    #(sepal_length, sepal_width, petal_length, petal_width)\n",
+    "train_out = training[:,4:]   #(species)\n",
+    "# use cross_entropy method: tf.nn.softmax_cross_entropy_with_logits method\n",
+    "# https://www.tensorflow.org/api_docs/python/tf/nn/softmax_cross_entropy_with_logits\n",
+    "loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(labels=y, logits=prediction))\n",
+    "# use GradientDescentOptimizer to train\n",
+    "train_step = tf.train.GradientDescentOptimizer(0.01).minimize(loss)\n",
+    "# initial glabal variables\n",
+    "init = tf.global_variables_initializer()\n",
+    "# get number of sets of training data\n",
+    "size = training.size\n",
+    "\n",
+    "# create loop to train\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    for eposh in range(10):    # times for training all training)set\n",
+    "        sess.run(train_step,{x:train_in, y:train_out})\n",
+    "        "
    ]
   },
   {
