--- a/Iris_data_set_TensorFlow.ipynb
+++ b/Iris_data_set_TensorFlow.ipynb
@@ -286,10 +286,7 @@
     "# initial glabal variables\n",
     "init = tf.global_variables_initializer()\n",
     "# get number of sets of training data\n",
-    "size = training.size\n",
-    "\n",
-    "\n",
-    "        "
+    "size = training.size\n"
    ]
   },
   {
@@ -309,106 +306,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter 0,Testing Accuracy 0.0\n",
-      "Iter 1,Testing Accuracy 0.0\n",
-      "Iter 2,Testing Accuracy 0.0\n",
-      "Iter 3,Testing Accuracy 0.0\n",
-      "Iter 4,Testing Accuracy 0.0\n",
-      "Iter 5,Testing Accuracy 0.0\n",
-      "Iter 6,Testing Accuracy 0.0\n",
-      "Iter 7,Testing Accuracy 0.0\n",
-      "Iter 8,Testing Accuracy 0.0\n",
-      "Iter 9,Testing Accuracy 0.0\n",
-      "Iter 10,Testing Accuracy 0.0\n",
-      "Iter 11,Testing Accuracy 0.0\n",
-      "Iter 12,Testing Accuracy 0.0\n",
-      "Iter 13,Testing Accuracy 0.0\n",
-      "Iter 14,Testing Accuracy 0.0\n",
-      "Iter 15,Testing Accuracy 0.0\n",
-      "Iter 16,Testing Accuracy 0.0\n",
-      "Iter 17,Testing Accuracy 0.0\n",
-      "Iter 18,Testing Accuracy 0.0\n",
-      "Iter 19,Testing Accuracy 0.0\n",
-      "Iter 20,Testing Accuracy 0.0\n",
-      "Iter 21,Testing Accuracy 0.0\n",
-      "Iter 22,Testing Accuracy 0.0\n",
-      "Iter 23,Testing Accuracy 0.0\n",
-      "Iter 24,Testing Accuracy 0.0\n",
-      "Iter 25,Testing Accuracy 0.0\n",
-      "Iter 26,Testing Accuracy 0.0\n",
-      "Iter 27,Testing Accuracy 0.0\n",
-      "Iter 28,Testing Accuracy 0.0\n",
-      "Iter 29,Testing Accuracy 0.0\n",
-      "Iter 30,Testing Accuracy 0.0\n",
-      "Iter 31,Testing Accuracy 0.0\n",
-      "Iter 32,Testing Accuracy 0.0\n",
-      "Iter 33,Testing Accuracy 0.0\n",
-      "Iter 34,Testing Accuracy 0.0\n",
-      "Iter 35,Testing Accuracy 0.0\n",
-      "Iter 36,Testing Accuracy 0.0\n",
-      "Iter 37,Testing Accuracy 0.0\n",
-      "Iter 38,Testing Accuracy 0.0\n",
-      "Iter 39,Testing Accuracy 0.0\n",
-      "Iter 40,Testing Accuracy 0.0\n",
-      "Iter 41,Testing Accuracy 0.0\n",
-      "Iter 42,Testing Accuracy 0.0\n",
-      "Iter 43,Testing Accuracy 0.0\n",
-      "Iter 44,Testing Accuracy 0.0\n",
-      "Iter 45,Testing Accuracy 0.0\n",
-      "Iter 46,Testing Accuracy 0.0\n",
-      "Iter 47,Testing Accuracy 0.0\n",
-      "Iter 48,Testing Accuracy 0.0\n",
-      "Iter 49,Testing Accuracy 0.0\n",
-      "Iter 50,Testing Accuracy 0.0\n",
-      "Iter 51,Testing Accuracy 0.0\n",
-      "Iter 52,Testing Accuracy 0.0\n",
-      "Iter 53,Testing Accuracy 0.0\n",
-      "Iter 54,Testing Accuracy 0.0\n",
-      "Iter 55,Testing Accuracy 0.0\n",
-      "Iter 56,Testing Accuracy 0.0\n",
-      "Iter 57,Testing Accuracy 0.0\n",
-      "Iter 58,Testing Accuracy 0.0\n",
-      "Iter 59,Testing Accuracy 0.0\n",
-      "Iter 60,Testing Accuracy 0.0\n",
-      "Iter 61,Testing Accuracy 0.0\n",
-      "Iter 62,Testing Accuracy 0.0\n",
-      "Iter 63,Testing Accuracy 0.0\n",
-      "Iter 64,Testing Accuracy 0.0\n",
-      "Iter 65,Testing Accuracy 0.0\n",
-      "Iter 66,Testing Accuracy 0.0\n",
-      "Iter 67,Testing Accuracy 0.0\n",
-      "Iter 68,Testing Accuracy 0.0\n",
-      "Iter 69,Testing Accuracy 0.0\n",
-      "Iter 70,Testing Accuracy 0.0\n",
-      "Iter 71,Testing Accuracy 0.0\n",
-      "Iter 72,Testing Accuracy 0.0\n",
-      "Iter 73,Testing Accuracy 0.0\n",
-      "Iter 74,Testing Accuracy 0.0\n",
-      "Iter 75,Testing Accuracy 0.0\n",
-      "Iter 76,Testing Accuracy 0.0\n",
-      "Iter 77,Testing Accuracy 0.0\n",
-      "Iter 78,Testing Accuracy 0.0\n",
-      "Iter 79,Testing Accuracy 0.0\n",
-      "Iter 80,Testing Accuracy 0.0\n",
-      "Iter 81,Testing Accuracy 0.0\n",
-      "Iter 82,Testing Accuracy 0.0\n",
-      "Iter 83,Testing Accuracy 0.0\n",
-      "Iter 84,Testing Accuracy 0.0\n",
-      "Iter 85,Testing Accuracy 0.0\n",
-      "Iter 86,Testing Accuracy 0.0\n",
-      "Iter 87,Testing Accuracy 0.0\n",
-      "Iter 88,Testing Accuracy 0.0\n",
-      "Iter 89,Testing Accuracy 0.0\n",
-      "Iter 90,Testing Accuracy 0.0\n",
-      "Iter 91,Testing Accuracy 0.0\n",
-      "Iter 92,Testing Accuracy 0.0\n",
-      "Iter 93,Testing Accuracy 0.0\n",
-      "Iter 94,Testing Accuracy 0.0\n",
-      "Iter 95,Testing Accuracy 0.0\n",
-      "Iter 96,Testing Accuracy 0.0\n",
-      "Iter 97,Testing Accuracy 0.0\n",
-      "Iter 98,Testing Accuracy 0.0\n",
-      "Iter 99,Testing Accuracy 0.0\n"
+      "Iter 99,Testing Accuracy 0.36,Testing Error Rate 0.639999985695\n"
      ]
     }
    ],
@@ -425,7 +323,7 @@
     "    for eposh in range(100):    # times for training all training)set\n",
     "        sess.run(train_step,{x:train_in, y:train_out})                  #train               \n",
     "        acc = sess.run(accuracy,{x:test_in, y:test_out})                #test\n",
-    "        print(\"Iter \" + str(eposh) + \",Testing Accuracy \" + str(acc))\n"
+    "    print(\"Iter \" + str(eposh) + \",Testing Accuracy \" + str(acc) + \",Testing Error Rate \" + str(1-acc))\n"
    ]
   },
   {
