--- a/Iris_data_set_TensorFlow.ipynb
+++ b/Iris_data_set_TensorFlow.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,18 +237,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(100, 5)\n",
-      "(50, 5)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Randomly split the data into training and testing\n",
     "# Adapt from : https://stackoverflow.com/questions/17412439/how-to-split-data-into-trainset-and-testset-randomly\n",
@@ -269,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -285,8 +276,11 @@
     "train_step = tf.train.GradientDescentOptimizer(0.01).minimize(loss)\n",
     "# initial glabal variables\n",
     "init = tf.global_variables_initializer()\n",
-    "# get number of sets of training data\n",
-    "size = training.size\n"
+    "# create loop to train\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    for eposh in range(100):    # times for training all training)set\n",
+    "        sess.run(train_step,{x:train_in, y:train_out})\n"
    ]
   },
   {
@@ -299,17 +293,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iter 99,Testing Accuracy 0.36,Testing Error Rate 0.639999985695\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# get input data_set and output data_set\n",
     "test_in = test[:,:4]    #(sepal_length, sepal_width, petal_length, petal_width)\n",
@@ -318,12 +304,11 @@
     "correct_prediction = tf.equal(y,prediction) # correct return true, otherwise return false\n",
     "accuracy = tf.reduce_mean(tf.cast(correct_prediction, tf.float32)) # true->1.0   false->0\n",
     "# create loop to test\n",
-    "with tf.Session() as sess:\n",
-    "    sess.run(init)\n",
-    "    for eposh in range(100):    # times for training all training)set\n",
-    "        sess.run(train_step,{x:train_in, y:train_out})                  #train               \n",
-    "        acc = sess.run(accuracy,{x:test_in, y:test_out})                #test\n",
-    "    print(\"Iter \" + str(eposh) + \",Testing Accuracy \" + str(acc) + \",Testing Error Rate \" + str(1-acc))\n"
+    "sess.run(init)\n",
+    "for eposh in range(100):    # times for training all training)set\n",
+    "    sess.run(train_step,{x:train_in, y:train_out})                  #train               \n",
+    "    acc = sess.run(accuracy,{x:test_in, y:test_out})                #test\n",
+    "print(\"Iter \" + str(eposh) + \",Testing Accuracy \" + str(acc) + \",Testing Error Rate \" + str(1-acc))\n"
    ]
   },
   {
