add some analysis points

--- a/Iris_data_set_TensorFlow.ipynb
+++ b/Iris_data_set_TensorFlow.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,9 +237,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100, 5)\n",
+      "(50, 5)\n"
+     ]
+    }
+   ],
    "source": [
     "# Randomly split the data into training and testing\n",
     "# Adapt from : https://stackoverflow.com/questions/17412439/how-to-split-data-into-trainset-and-testset-randomly\n",
@@ -260,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -293,9 +302,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iter 99,Testing Accuracy 0.44,Testing Error Rate 0.560000002384\n"
+     ]
+    }
+   ],
    "source": [
     "# get input data_set and output data_set\n",
     "test_in = test[:,:4]    #(sepal_length, sepal_width, petal_length, petal_width)\n",
@@ -304,19 +321,33 @@
     "correct_prediction = tf.equal(y,prediction) # correct return true, otherwise return false\n",
     "accuracy = tf.reduce_mean(tf.cast(correct_prediction, tf.float32)) # true->1.0   false->0\n",
     "# create loop to test\n",
-    "sess.run(init)\n",
-    "for eposh in range(100):    # times for training all training)set\n",
-    "    sess.run(train_step,{x:train_in, y:train_out})                  #train               \n",
-    "    acc = sess.run(accuracy,{x:test_in, y:test_out})                #test\n",
-    "print(\"Iter \" + str(eposh) + \",Testing Accuracy \" + str(acc) + \",Testing Error Rate \" + str(1-acc))\n"
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "    for eposh in range(100):    # times for training all training)set\n",
+    "        sess.run(train_step,{x:train_in, y:train_out})                  #train               \n",
+    "        acc = sess.run(accuracy,{x:test_in, y:test_out})                #test\n",
+    "    print(\"Iter \" + str(eposh) + \",Testing Accuracy \" + str(acc) + \",Testing Error Rate \" + str(1-acc))\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Analysis\n",
+    "### there are some points infecting the Accuracy:\n",
+    "### * define a number to represent a species (string cannot be used to calculate )\n",
+    "### * randomly split train/test data set\n",
+    "### * different cost-calculate method\n",
+    "### * different Optimizer\n",
+    "### * ... ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# End"
+   ]
   }
  ],
  "metadata": {
