--- a/Iris_data_set_TensorFlow.ipynb
+++ b/Iris_data_set_TensorFlow.ipynb
@@ -20,182 +20,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 5.1  3.5  1.4  0.2  1. ]\n",
-      " [ 4.9  3.   1.4  0.2  1. ]\n",
-      " [ 4.7  3.2  1.3  0.2  1. ]\n",
-      " [ 4.6  3.1  1.5  0.2  1. ]\n",
-      " [ 5.   3.6  1.4  0.2  1. ]\n",
-      " [ 5.4  3.9  1.7  0.4  1. ]\n",
-      " [ 4.6  3.4  1.4  0.3  1. ]\n",
-      " [ 5.   3.4  1.5  0.2  1. ]\n",
-      " [ 4.4  2.9  1.4  0.2  1. ]\n",
-      " [ 4.9  3.1  1.5  0.1  1. ]\n",
-      " [ 5.4  3.7  1.5  0.2  1. ]\n",
-      " [ 4.8  3.4  1.6  0.2  1. ]\n",
-      " [ 4.8  3.   1.4  0.1  1. ]\n",
-      " [ 4.3  3.   1.1  0.1  1. ]\n",
-      " [ 5.8  4.   1.2  0.2  1. ]\n",
-      " [ 5.7  4.4  1.5  0.4  1. ]\n",
-      " [ 5.4  3.9  1.3  0.4  1. ]\n",
-      " [ 5.1  3.5  1.4  0.3  1. ]\n",
-      " [ 5.7  3.8  1.7  0.3  1. ]\n",
-      " [ 5.1  3.8  1.5  0.3  1. ]\n",
-      " [ 5.4  3.4  1.7  0.2  1. ]\n",
-      " [ 5.1  3.7  1.5  0.4  1. ]\n",
-      " [ 4.6  3.6  1.   0.2  1. ]\n",
-      " [ 5.1  3.3  1.7  0.5  1. ]\n",
-      " [ 4.8  3.4  1.9  0.2  1. ]\n",
-      " [ 5.   3.   1.6  0.2  1. ]\n",
-      " [ 5.   3.4  1.6  0.4  1. ]\n",
-      " [ 5.2  3.5  1.5  0.2  1. ]\n",
-      " [ 5.2  3.4  1.4  0.2  1. ]\n",
-      " [ 4.7  3.2  1.6  0.2  1. ]\n",
-      " [ 4.8  3.1  1.6  0.2  1. ]\n",
-      " [ 5.4  3.4  1.5  0.4  1. ]\n",
-      " [ 5.2  4.1  1.5  0.1  1. ]\n",
-      " [ 5.5  4.2  1.4  0.2  1. ]\n",
-      " [ 4.9  3.1  1.5  0.1  1. ]\n",
-      " [ 5.   3.2  1.2  0.2  1. ]\n",
-      " [ 5.5  3.5  1.3  0.2  1. ]\n",
-      " [ 4.9  3.1  1.5  0.1  1. ]\n",
-      " [ 4.4  3.   1.3  0.2  1. ]\n",
-      " [ 5.1  3.4  1.5  0.2  1. ]\n",
-      " [ 5.   3.5  1.3  0.3  1. ]\n",
-      " [ 4.5  2.3  1.3  0.3  1. ]\n",
-      " [ 4.4  3.2  1.3  0.2  1. ]\n",
-      " [ 5.   3.5  1.6  0.6  1. ]\n",
-      " [ 5.1  3.8  1.9  0.4  1. ]\n",
-      " [ 4.8  3.   1.4  0.3  1. ]\n",
-      " [ 5.1  3.8  1.6  0.2  1. ]\n",
-      " [ 4.6  3.2  1.4  0.2  1. ]\n",
-      " [ 5.3  3.7  1.5  0.2  1. ]\n",
-      " [ 5.   3.3  1.4  0.2  1. ]\n",
-      " [ 7.   3.2  4.7  1.4  2. ]\n",
-      " [ 6.4  3.2  4.5  1.5  2. ]\n",
-      " [ 6.9  3.1  4.9  1.5  2. ]\n",
-      " [ 5.5  2.3  4.   1.3  2. ]\n",
-      " [ 6.5  2.8  4.6  1.5  2. ]\n",
-      " [ 5.7  2.8  4.5  1.3  2. ]\n",
-      " [ 6.3  3.3  4.7  1.6  2. ]\n",
-      " [ 4.9  2.4  3.3  1.   2. ]\n",
-      " [ 6.6  2.9  4.6  1.3  2. ]\n",
-      " [ 5.2  2.7  3.9  1.4  2. ]\n",
-      " [ 5.   2.   3.5  1.   2. ]\n",
-      " [ 5.9  3.   4.2  1.5  2. ]\n",
-      " [ 6.   2.2  4.   1.   2. ]\n",
-      " [ 6.1  2.9  4.7  1.4  2. ]\n",
-      " [ 5.6  2.9  3.6  1.3  2. ]\n",
-      " [ 6.7  3.1  4.4  1.4  2. ]\n",
-      " [ 5.6  3.   4.5  1.5  2. ]\n",
-      " [ 5.8  2.7  4.1  1.   2. ]\n",
-      " [ 6.2  2.2  4.5  1.5  2. ]\n",
-      " [ 5.6  2.5  3.9  1.1  2. ]\n",
-      " [ 5.9  3.2  4.8  1.8  2. ]\n",
-      " [ 6.1  2.8  4.   1.3  2. ]\n",
-      " [ 6.3  2.5  4.9  1.5  2. ]\n",
-      " [ 6.1  2.8  4.7  1.2  2. ]\n",
-      " [ 6.4  2.9  4.3  1.3  2. ]\n",
-      " [ 6.6  3.   4.4  1.4  2. ]\n",
-      " [ 6.8  2.8  4.8  1.4  2. ]\n",
-      " [ 6.7  3.   5.   1.7  2. ]\n",
-      " [ 6.   2.9  4.5  1.5  2. ]\n",
-      " [ 5.7  2.6  3.5  1.   2. ]\n",
-      " [ 5.5  2.4  3.8  1.1  2. ]\n",
-      " [ 5.5  2.4  3.7  1.   2. ]\n",
-      " [ 5.8  2.7  3.9  1.2  2. ]\n",
-      " [ 6.   2.7  5.1  1.6  2. ]\n",
-      " [ 5.4  3.   4.5  1.5  2. ]\n",
-      " [ 6.   3.4  4.5  1.6  2. ]\n",
-      " [ 6.7  3.1  4.7  1.5  2. ]\n",
-      " [ 6.3  2.3  4.4  1.3  2. ]\n",
-      " [ 5.6  3.   4.1  1.3  2. ]\n",
-      " [ 5.5  2.5  4.   1.3  2. ]\n",
-      " [ 5.5  2.6  4.4  1.2  2. ]\n",
-      " [ 6.1  3.   4.6  1.4  2. ]\n",
-      " [ 5.8  2.6  4.   1.2  2. ]\n",
-      " [ 5.   2.3  3.3  1.   2. ]\n",
-      " [ 5.6  2.7  4.2  1.3  2. ]\n",
-      " [ 5.7  3.   4.2  1.2  2. ]\n",
-      " [ 5.7  2.9  4.2  1.3  2. ]\n",
-      " [ 6.2  2.9  4.3  1.3  2. ]\n",
-      " [ 5.1  2.5  3.   1.1  2. ]\n",
-      " [ 5.7  2.8  4.1  1.3  2. ]\n",
-      " [ 6.3  3.3  6.   2.5  3. ]\n",
-      " [ 5.8  2.7  5.1  1.9  3. ]\n",
-      " [ 7.1  3.   5.9  2.1  3. ]\n",
-      " [ 6.3  2.9  5.6  1.8  3. ]\n",
-      " [ 6.5  3.   5.8  2.2  3. ]\n",
-      " [ 7.6  3.   6.6  2.1  3. ]\n",
-      " [ 4.9  2.5  4.5  1.7  3. ]\n",
-      " [ 7.3  2.9  6.3  1.8  3. ]\n",
-      " [ 6.7  2.5  5.8  1.8  3. ]\n",
-      " [ 7.2  3.6  6.1  2.5  3. ]\n",
-      " [ 6.5  3.2  5.1  2.   3. ]\n",
-      " [ 6.4  2.7  5.3  1.9  3. ]\n",
-      " [ 6.8  3.   5.5  2.1  3. ]\n",
-      " [ 5.7  2.5  5.   2.   3. ]\n",
-      " [ 5.8  2.8  5.1  2.4  3. ]\n",
-      " [ 6.4  3.2  5.3  2.3  3. ]\n",
-      " [ 6.5  3.   5.5  1.8  3. ]\n",
-      " [ 7.7  3.8  6.7  2.2  3. ]\n",
-      " [ 7.7  2.6  6.9  2.3  3. ]\n",
-      " [ 6.   2.2  5.   1.5  3. ]\n",
-      " [ 6.9  3.2  5.7  2.3  3. ]\n",
-      " [ 5.6  2.8  4.9  2.   3. ]\n",
-      " [ 7.7  2.8  6.7  2.   3. ]\n",
-      " [ 6.3  2.7  4.9  1.8  3. ]\n",
-      " [ 6.7  3.3  5.7  2.1  3. ]\n",
-      " [ 7.2  3.2  6.   1.8  3. ]\n",
-      " [ 6.2  2.8  4.8  1.8  3. ]\n",
-      " [ 6.1  3.   4.9  1.8  3. ]\n",
-      " [ 6.4  2.8  5.6  2.1  3. ]\n",
-      " [ 7.2  3.   5.8  1.6  3. ]\n",
-      " [ 7.4  2.8  6.1  1.9  3. ]\n",
-      " [ 7.9  3.8  6.4  2.   3. ]\n",
-      " [ 6.4  2.8  5.6  2.2  3. ]\n",
-      " [ 6.3  2.8  5.1  1.5  3. ]\n",
-      " [ 6.1  2.6  5.6  1.4  3. ]\n",
-      " [ 7.7  3.   6.1  2.3  3. ]\n",
-      " [ 6.3  3.4  5.6  2.4  3. ]\n",
-      " [ 6.4  3.1  5.5  1.8  3. ]\n",
-      " [ 6.   3.   4.8  1.8  3. ]\n",
-      " [ 6.9  3.1  5.4  2.1  3. ]\n",
-      " [ 6.7  3.1  5.6  2.4  3. ]\n",
-      " [ 6.9  3.1  5.1  2.3  3. ]\n",
-      " [ 5.8  2.7  5.1  1.9  3. ]\n",
-      " [ 6.8  3.2  5.9  2.3  3. ]\n",
-      " [ 6.7  3.3  5.7  2.5  3. ]\n",
-      " [ 6.7  3.   5.2  2.3  3. ]\n",
-      " [ 6.3  2.5  5.   1.9  3. ]\n",
-      " [ 6.5  3.   5.2  2.   3. ]\n",
-      " [ 6.2  3.4  5.4  2.3  3. ]\n",
-      " [ 5.9  3.   5.1  1.8  3. ]]\n"
+      "[ 5.1  3.5  1.4  0.2  1. ]\n",
+      "[ 4.9  3.   1.4  0.2  1. ]\n",
+      "[ 4.7  3.2  1.3  0.2  1. ]\n",
+      "[ 4.6  3.1  1.5  0.2  1. ]\n",
+      "[ 5.   3.6  1.4  0.2  1. ]\n"
      ]
     }
    ],
    "source": [
+    "# adapt from https://github.com/antonrufino/TensorFlow-IrisNN/blob/master/iris_nn.py\n",
     "# inport numpy\n",
     "import numpy as np\n",
     "# load Iris data set\n",
     "OriginalData = np.loadtxt(\"iris.csv\",str, delimiter=\",\", skiprows=1, unpack=True)\n",
     "Iris = OriginalData.transpose()\n",
-    "# change 4th column data (species name) to a number\n",
-    "#  setosa     ->   1\n",
-    "#  virginica  ->   2\n",
-    "#  versicolor ->   3\n",
-    "Iris[Iris[:,4] == 'setosa',4] = '1';\n",
-    "Iris[Iris[:,4] == 'versicolor',4] = '2';\n",
-    "Iris[Iris[:,4] == 'virginica',4] = '3';\n",
+    "# change 4th column data (species name) to a number, make it calculatable\n",
+    "#  setosa     ->   0\n",
+    "#  virginica  ->   1\n",
+    "#  versicolor ->   2\n",
+    "Iris[Iris[:,4] == 'setosa',4] = '0';\n",
+    "Iris[Iris[:,4] == 'versicolor',4] = '1';\n",
+    "Iris[Iris[:,4] == 'virginica',4] = '2';\n",
     "# convert array(Iris) from type(str) to float\n",
     "Iris = np.array(Iris).astype(np.float)\n",
-    "print(Iris)"
+    "# the data stored like this:\n",
+    "for i in range(5):\n",
+    "    print(Iris[i,:])"
    ]
   },
   {
