--- a/Iris_data_set_TensorFlow.ipynb
+++ b/Iris_data_set_TensorFlow.ipynb
@@ -20,18 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 5.1  3.5  1.4  0.2  1. ]\n",
-      "[ 4.9  3.   1.4  0.2  1. ]\n",
-      "[ 4.7  3.2  1.3  0.2  1. ]\n",
-      "[ 4.6  3.1  1.5  0.2  1. ]\n",
-      "[ 5.   3.6  1.4  0.2  1. ]\n"
+      "[ 5.1  3.5  1.4  0.2  0. ]\n",
+      "[ 4.9  3.   1.4  0.2  0. ]\n",
+      "[ 4.7  3.2  1.3  0.2  0. ]\n",
+      "[ 4.6  3.1  1.5  0.2  0. ]\n",
+      "[ 5.   3.6  1.4  0.2  0. ]\n"
      ]
     }
    ],
@@ -42,10 +42,10 @@
     "# load Iris data set\n",
     "OriginalData = np.loadtxt(\"iris.csv\",str, delimiter=\",\", skiprows=1, unpack=True)\n",
     "Iris = OriginalData.transpose()\n",
-    "# change 4th column data (species name) to a number, make it calculatable\n",
-    "#  setosa     ->   0\n",
-    "#  virginica  ->   1\n",
-    "#  versicolor ->   2\n",
+    "# change 4th column data (species name) to a index number, suit one-hot vectors\n",
+    "#  setosa     ->   0  ->[1,0,0]\n",
+    "#  virginica  ->   1  ->[0,1,0]\n",
+    "#  versicolor ->   2  ->[0,0,1]\n",
     "Iris[Iris[:,4] == 'setosa',4] = '0';\n",
     "Iris[Iris[:,4] == 'versicolor',4] = '1';\n",
     "Iris[Iris[:,4] == 'virginica',4] = '2';\n",
@@ -70,16 +70,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# a set of data contains: sepal_length, sepal_width, petal_length, petal_width and species\n",
     "# import tensorflow\n",
     "import tensorflow as tf\n",
-    "# a set of data contains: sepal_length, sepal_width, petal_length, petal_width and species\n",
-    "# create a model\n",
-    "x = tf.placeholder(tf.float32,[None,4])  #input_data  (sepal_length, sepal_width, petal_length, petal_width)\n",
-    "y = tf.placeholder(tf.float32,[None,1])  #output_data (species)\n",
-    "# tf.truncated_normal method from:\n",
-    "# https://www.tensorflow.org/api_docs/python/tf/truncated_normal\n",
-    "W = tf.Variable(tf.truncated_normal([4,1],stddev=0.1))  # Weight ([4,1]: 4 input and 1 output)\n",
-    "b = tf.Variable(tf.zeros([1]) + 1)                      # bias\n",
+    "# create a model:\n",
+    "# input layer\n",
+    "# input_data [None,4] means:None: do not deside the number of set of input numbers\n",
+    "#                           4: (sepal_length, sepal_width, petal_length, petal_width)\n",
+    "x = tf.placeholder(tf.float32,[None,4])\n",
+    "# output_data (species) means:None: do not deside the number of set of input numbers\n",
+    "#                           3: species:(setosa,versicolor,virginica)\n",
+    "y = tf.placeholder(tf.float32,[None,3])\n",
+    "# output layer\n",
+    "# tf.truncated_normal --> outputs random values from a truncated normal distribution\n",
+    "# 'stddev' is the standard deviation of the truncated normal distribution.\n",
+    "# method details: https://www.tensorflow.org/api_docs/python/tf/truncated_normal\n",
+    "# here, designed a [4,3] matrix for Weight(W), simply means 4 data inputs and 3 outputs\n",
+    "W = tf.Variable(tf.truncated_normal([4,3],stddev=0.1))\n",
+    "# set bias for output value, because output 3 values, so the size of bias is [3]\n",
+    "b = tf.Variable(tf.zeros([3]) + 1)\n",
+    "# tf.matmul --> a method multiplies matrix\n",
+    "# tf.nn.softmax --> softmax gives us a list of values between 0 and 1 that add up to 1\n",
     "prediction = tf.nn.softmax(tf.matmul(x,W) + b)"
    ]
   },
