--- a/Iris_data_set_TensorFlow.ipynb
+++ b/Iris_data_set_TensorFlow.ipynb
@@ -27,11 +27,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 5.1  3.5  1.4  0.2  0. ]\n",
-      "[ 4.9  3.   1.4  0.2  0. ]\n",
-      "[ 4.7  3.2  1.3  0.2  0. ]\n",
-      "[ 4.6  3.1  1.5  0.2  0. ]\n",
-      "[ 5.   3.6  1.4  0.2  0. ]\n"
+      "['5.1' '3.5' '1.4' '0.2' 'setosa']\n",
+      "['4.9' '3' '1.4' '0.2' 'setosa']\n",
+      "['4.7' '3.2' '1.3' '0.2' 'setosa']\n",
+      "['4.6' '3.1' '1.5' '0.2' 'setosa']\n",
+      "['5' '3.6' '1.4' '0.2' 'setosa']\n"
      ]
     }
    ],
@@ -39,21 +39,13 @@
     "# adapt from https://github.com/antonrufino/TensorFlow-IrisNN/blob/master/iris_nn.py\n",
     "# inport numpy\n",
     "import numpy as np\n",
-    "# load Iris data set\n",
+    "# load Iris data set as str,because the 'species' column's type is str\n",
     "OriginalData = np.loadtxt(\"iris.csv\",str, delimiter=\",\", skiprows=1, unpack=True)\n",
-    "Iris = OriginalData.transpose()\n",
-    "# change 4th column data (species name) to a index number, suit one-hot vectors\n",
-    "#  setosa     ->   0  ->[1,0,0]\n",
-    "#  virginica  ->   1  ->[0,1,0]\n",
-    "#  versicolor ->   2  ->[0,0,1]\n",
-    "Iris[Iris[:,4] == 'setosa',4] = '0';\n",
-    "Iris[Iris[:,4] == 'versicolor',4] = '1';\n",
-    "Iris[Iris[:,4] == 'virginica',4] = '2';\n",
-    "# convert array(Iris) from type(str) to float\n",
-    "Iris = np.array(Iris).astype(np.float)\n",
+    "iris = OriginalData.transpose()\n",
+    "\n",
     "# the data stored like this:\n",
     "for i in range(5):\n",
-    "    print(Iris[i,:])"
+    "    print(iris[i,:])"
    ]
   },
   {
