resplit the data into training and testing

--- a/Iris_data_set_TensorFlow.ipynb
+++ b/Iris_data_set_TensorFlow.ipynb
@@ -52,7 +52,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Use Tensorflow to create model\n",
+    "## 1. Split the data into training and testing\n",
+    "Split the data set into a training set and a testing set.\n",
+    "You should investigate the best way to do this, and list any online references used in your notebook.\n",
+    "If you wish to, you can write some code to randomly separate the data on the fly.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "species: setosa --> 0 --> [ 1.  0.  0.]\n",
+      "species: setosa --> 0 --> [ 1.  0.  0.]\n",
+      "species: versicolor --> 1 --> [ 0.  1.  0.]\n",
+      "species: virginica --> 2 --> [ 0.  0.  1.]\n",
+      "species: virginica --> 2 --> [ 0.  0.  1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Randomly split the data into training and testing\n",
+    "# Adapt from : https://stackoverflow.com/questions/17412439/how-to-split-data-into-trainset-and-testset-randomly\n",
+    "np.random.shuffle(iris)\n",
+    "# define 100 set of data for training, and 50 for test\n",
+    "train, test = iris[:100], iris[100:]\n",
+    "# get input data (sepal_length, sepal_width, petal_length, petal_width)\n",
+    "in_train = train[:,:4]\n",
+    "in_test = test[:,:4]\n",
+    "# get output data\n",
+    "out_train = train[:,4]\n",
+    "out_test = test[:,4]\n",
+    "# convert inputs data from type(str) to float\n",
+    "in_train = np.array(in_train).astype(np.float)\n",
+    "in_test = np.array(in_test).astype(np.float)\n",
+    "# get a list of output categories as 'one-hot vectors'\n",
+    "# a one-hot vector is a vector which is 0 in most dimensions, and 1 in a single dimension\n",
+    "# in this case,convert like this:\n",
+    "#    setosa      ->[1,0,0]\n",
+    "#    virginica   ->[0,1,0]\n",
+    "#    versicolor  ->[0,0,1]\n",
+    "# np.unique --> return a unique list in array, \n",
+    "# 'return_inverse=True' will return the index number of such unique element\n",
+    "# more details: https://docs.scipy.org/doc/numpy-1.13.0/reference/generated/numpy.unique.html\n",
+    "uniq_test, ids_test = np.unique(out_test, return_inverse=True)\n",
+    "uniq_train, ids_train = np.unique(out_train, return_inverse=True)\n",
+    "# np_utils.to_categorical --> Converts a class vector (integers) to binary class matrix.\n",
+    "# more details: https://keras.io/utils/\n",
+    "from keras.utils import np_utils\n",
+    "onehot_train = np_utils.to_categorical(ids_train, len(uniq_train))\n",
+    "onehot_test = np_utils.to_categorical(ids_test, len(uniq_test))\n",
+    "# after np.unique & np_utils.to_categorical two operation\n",
+    "# the data like this: \n",
+    "for i in range(5):\n",
+    "    print('species: '+(str)(out_test[i])+' --> '+(str)(ids_test[i])\\\n",
+    "          +' --> '+(str)(onehot_test[i,:]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Use Tensorflow to create model\n",
     "Use Tensorflow to create a model to predict the species of Iris from a flower's sepal width, sepal length, petal width, and petal length."
    ]
   },
@@ -84,40 +156,6 @@
     "# tf.matmul --> a method multiplies matrix\n",
     "# tf.nn.softmax --> softmax gives us a list of values between 0 and 1 that add up to 1\n",
     "prediction = tf.nn.softmax(tf.matmul(x,W) + b)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. Split the data into training and testing\n",
-    "Split the data set into a training set and a testing set.\n",
-    "You should investigate the best way to do this, and list any online references used in your notebook.\n",
-    "If you wish to, you can write some code to randomly separate the data on the fly.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(100, 5)\n",
-      "(50, 5)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Randomly split the data into training and testing\n",
-    "# Adapt from : https://stackoverflow.com/questions/17412439/how-to-split-data-into-trainset-and-testset-randomly\n",
-    "np.random.shuffle(Iris)\n",
-    "# define 100 set of data for training, and 50 for test\n",
-    "training, test = Iris[:100], Iris[100:] \n",
-    "print(training.shape)\n",
-    "print(test.shape)"
    ]
   },
   {
