--- a/Iris_data_set_TensorFlow.ipynb
+++ b/Iris_data_set_TensorFlow.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,19 +168,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# get input data_set and output data_set\n",
-    "train_in = training[:,:4]    #(sepal_length, sepal_width, petal_length, petal_width)\n",
-    "train_out = training[:,4:]   #(species)\n",
-    "# use cross_entropy method: tf.nn.softmax_cross_entropy_with_logits method\n",
-    "# https://www.tensorflow.org/api_docs/python/tf/nn/softmax_cross_entropy_with_logits\n",
+    "# here, use cross_entropy and softmax method:\n",
+    "# cross_entropy function --> as the loss function\n",
+    "# softmax is the thing to do, because softmax gives us a list of values between 0 and 1 that add up to 1\n",
+    "# tf.nn.softmax_cross_entropy_with_logits method combines cross_entropy and softmax\n",
+    "# more details: https://www.tensorflow.org/api_docs/python/tf/nn/softmax_cross_entropy_with_logits\n",
     "loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(labels=y, logits=prediction))\n",
-    "# use GradientDescentOptimizer to train\n",
+    "# use GradientDescent optimizer to train\n",
     "train_step = tf.train.GradientDescentOptimizer(0.01).minimize(loss)\n",
     "# initial glabal variables\n",
     "init = tf.global_variables_initializer()\n",
@@ -188,7 +188,7 @@
     "with tf.Session() as sess:\n",
     "    sess.run(init)\n",
     "    for eposh in range(100):    # times for training all training)set\n",
-    "        sess.run(train_step,{x:train_in, y:train_out})\n"
+    "        sess.run(train_step,{x:in_train, y:onehot_train})"
    ]
   },
   {
@@ -201,44 +201,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter 99,Testing Accuracy 0.44,Testing Error Rate 0.560000002384\n"
+      "Iter 0,Testing Accuracy 0.34,Testing Error Rate 0.659999996424\n",
+      "Iter 1,Testing Accuracy 0.34,Testing Error Rate 0.659999996424\n",
+      "Iter 2,Testing Accuracy 0.46,Testing Error Rate 0.539999991655\n",
+      "Iter 3,Testing Accuracy 0.3,Testing Error Rate 0.699999988079\n",
+      "Iter 4,Testing Accuracy 0.3,Testing Error Rate 0.699999988079\n",
+      "Iter 5,Testing Accuracy 0.3,Testing Error Rate 0.699999988079\n",
+      "Iter 6,Testing Accuracy 0.3,Testing Error Rate 0.699999988079\n",
+      "Iter 7,Testing Accuracy 0.3,Testing Error Rate 0.699999988079\n",
+      "Iter 8,Testing Accuracy 0.3,Testing Error Rate 0.699999988079\n",
+      "Iter 9,Testing Accuracy 0.3,Testing Error Rate 0.699999988079\n",
+      "Iter 10,Testing Accuracy 0.32,Testing Error Rate 0.680000007153\n",
+      "Iter 11,Testing Accuracy 0.52,Testing Error Rate 0.480000019073\n",
+      "Iter 12,Testing Accuracy 0.64,Testing Error Rate 0.360000014305\n",
+      "Iter 13,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 14,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 15,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 16,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 17,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 18,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 19,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 20,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 21,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 22,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 23,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 24,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 25,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 26,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 27,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 28,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 29,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 30,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 31,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 32,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 33,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 34,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 35,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 36,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 37,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 38,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 39,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 40,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 41,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 42,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 43,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 44,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 45,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 46,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 47,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 48,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 49,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 50,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 51,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 52,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 53,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 54,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 55,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 56,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 57,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 58,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 59,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 60,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 61,Testing Accuracy 0.66,Testing Error Rate 0.339999973774\n",
+      "Iter 62,Testing Accuracy 0.68,Testing Error Rate 0.319999992847\n",
+      "Iter 63,Testing Accuracy 0.68,Testing Error Rate 0.319999992847\n",
+      "Iter 64,Testing Accuracy 0.68,Testing Error Rate 0.319999992847\n",
+      "Iter 65,Testing Accuracy 0.68,Testing Error Rate 0.319999992847\n",
+      "Iter 66,Testing Accuracy 0.68,Testing Error Rate 0.319999992847\n",
+      "Iter 67,Testing Accuracy 0.68,Testing Error Rate 0.319999992847\n",
+      "Iter 68,Testing Accuracy 0.7,Testing Error Rate 0.300000011921\n",
+      "Iter 69,Testing Accuracy 0.7,Testing Error Rate 0.300000011921\n",
+      "Iter 70,Testing Accuracy 0.7,Testing Error Rate 0.300000011921\n",
+      "Iter 71,Testing Accuracy 0.7,Testing Error Rate 0.300000011921\n",
+      "Iter 72,Testing Accuracy 0.7,Testing Error Rate 0.300000011921\n",
+      "Iter 73,Testing Accuracy 0.7,Testing Error Rate 0.300000011921\n",
+      "Iter 74,Testing Accuracy 0.7,Testing Error Rate 0.300000011921\n",
+      "Iter 75,Testing Accuracy 0.74,Testing Error Rate 0.259999990463\n",
+      "Iter 76,Testing Accuracy 0.74,Testing Error Rate 0.259999990463\n",
+      "Iter 77,Testing Accuracy 0.74,Testing Error Rate 0.259999990463\n",
+      "Iter 78,Testing Accuracy 0.74,Testing Error Rate 0.259999990463\n",
+      "Iter 79,Testing Accuracy 0.76,Testing Error Rate 0.240000009537\n",
+      "Iter 80,Testing Accuracy 0.78,Testing Error Rate 0.22000002861\n",
+      "Iter 81,Testing Accuracy 0.8,Testing Error Rate 0.199999988079\n",
+      "Iter 82,Testing Accuracy 0.8,Testing Error Rate 0.199999988079\n",
+      "Iter 83,Testing Accuracy 0.8,Testing Error Rate 0.199999988079\n",
+      "Iter 84,Testing Accuracy 0.8,Testing Error Rate 0.199999988079\n",
+      "Iter 85,Testing Accuracy 0.8,Testing Error Rate 0.199999988079\n",
+      "Iter 86,Testing Accuracy 0.82,Testing Error Rate 0.180000007153\n",
+      "Iter 87,Testing Accuracy 0.82,Testing Error Rate 0.180000007153\n",
+      "Iter 88,Testing Accuracy 0.84,Testing Error Rate 0.160000026226\n",
+      "Iter 89,Testing Accuracy 0.84,Testing Error Rate 0.160000026226\n",
+      "Iter 90,Testing Accuracy 0.84,Testing Error Rate 0.160000026226\n",
+      "Iter 91,Testing Accuracy 0.84,Testing Error Rate 0.160000026226\n",
+      "Iter 92,Testing Accuracy 0.84,Testing Error Rate 0.160000026226\n",
+      "Iter 93,Testing Accuracy 0.84,Testing Error Rate 0.160000026226\n",
+      "Iter 94,Testing Accuracy 0.84,Testing Error Rate 0.160000026226\n",
+      "Iter 95,Testing Accuracy 0.84,Testing Error Rate 0.160000026226\n",
+      "Iter 96,Testing Accuracy 0.86,Testing Error Rate 0.139999985695\n",
+      "Iter 97,Testing Accuracy 0.86,Testing Error Rate 0.139999985695\n",
+      "Iter 98,Testing Accuracy 0.86,Testing Error Rate 0.139999985695\n",
+      "Iter 99,Testing Accuracy 0.86,Testing Error Rate 0.139999985695\n"
      ]
     }
    ],
    "source": [
-    "# get input data_set and output data_set\n",
-    "test_in = test[:,:4]    #(sepal_length, sepal_width, petal_length, petal_width)\n",
-    "test_out = test[:,4:]   #(species)\n",
     "# calculate accuracy\n",
-    "correct_prediction = tf.equal(y,prediction) # correct return true, otherwise return false\n",
+    "correct_prediction = tf.equal(tf.argmax(y,1),tf.argmax(prediction,1)) # correct return true, otherwise return false\n",
     "accuracy = tf.reduce_mean(tf.cast(correct_prediction, tf.float32)) # true->1.0   false->0\n",
     "# create loop to test\n",
     "with tf.Session() as sess:\n",
     "    sess.run(init)\n",
     "    for eposh in range(100):    # times for training all training)set\n",
-    "        sess.run(train_step,{x:train_in, y:train_out})                  #train               \n",
-    "        acc = sess.run(accuracy,{x:test_in, y:test_out})                #test\n",
-    "    print(\"Iter \" + str(eposh) + \",Testing Accuracy \" + str(acc) + \",Testing Error Rate \" + str(1-acc))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Analysis\n",
-    "### there are some points infecting the Accuracy:\n",
-    "### * define a number to represent a species (string cannot be used to calculate )\n",
-    "### * randomly split train/test data set\n",
-    "### * different cost-calculate method\n",
-    "### * different Optimizer\n",
-    "### * ... ..."
+    "        sess.run(train_step,{x:in_train, y:onehot_train})                  #train               \n",
+    "        acc = sess.run(accuracy,{x:in_test, y:onehot_test})                #test\n",
+    "        print(\"Iter \" + str(eposh) + \",Testing Accuracy \" + str(acc) + \",Testing Error Rate \" + str(1-acc))\n"
    ]
   },
   {
