--- a/Iris_data_set_TensorFlow.ipynb
+++ b/Iris_data_set_TensorFlow.ipynb
@@ -85,6 +85,7 @@
    "source": [
     "# Randomly split the data into training and testing\n",
     "# Adapt from : https://stackoverflow.com/questions/17412439/how-to-split-data-into-trainset-and-testset-randomly\n",
+    "# use numpy.random.shuffle method to random the data set\n",
     "np.random.shuffle(iris)\n",
     "# define 100 set of data for training, and 50 for test\n",
     "train, test = iris[:100], iris[100:]\n",
@@ -94,15 +95,15 @@
     "# get output data\n",
     "out_train = train[:,4]\n",
     "out_test = test[:,4]\n",
-    "# convert inputs data from type(str) to float\n",
+    "# convert inputs data from type(str) to float, cause type 'str' cannot used to calculate. \n",
     "in_train = np.array(in_train).astype(np.float)\n",
     "in_test = np.array(in_test).astype(np.float)\n",
     "# get a list of output categories as 'one-hot vectors'\n",
     "# a one-hot vector is a vector which is 0 in most dimensions, and 1 in a single dimension\n",
     "# in this case,convert like this:\n",
     "#    setosa      ->[1,0,0]\n",
-    "#    virginica   ->[0,1,0]\n",
-    "#    versicolor  ->[0,0,1]\n",
+    "#    versicolor  ->[0,1,0]\n",
+    "#    virginica   ->[0,0,1]\n",
     "# np.unique --> return a unique list in array, \n",
     "# 'return_inverse=True' will return the index number of such unique element\n",
     "# more details: https://docs.scipy.org/doc/numpy-1.13.0/reference/generated/numpy.unique.html\n",
